// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`creates invocation error alarms (single and multiple) with defaults 1`] = `
Object {
  "Resources": Object {
    "LambdaAlarms3InvocationSeriesAlarm9D294367": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Ref": "Topic3DEAE47A7",
          },
        ],
        "AlarmDescription": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Invocation for '",
              Object {
                "Ref": "TestedLambda32F7528BF",
              },
              "' failed repeatedly. ",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": Array [
          Object {
            "Name": "FunctionName",
            "Value": Object {
              "Ref": "TestedLambda32F7528BF",
            },
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "OKActions": Array [
          Object {
            "Ref": "Topic3DEAE47A7",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "LambdaAlarms3SingleInvocationAlarm753BA611": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Ref": "Topic3DEAE47A7",
          },
        ],
        "AlarmDescription": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Invocation for '",
              Object {
                "Ref": "TestedLambda32F7528BF",
              },
              "' had a single failure. ",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": Array [
          Object {
            "Name": "FunctionName",
            "Value": Object {
              "Ref": "TestedLambda32F7528BF",
            },
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": "AWS/Lambda",
        "OKActions": Array [
          Object {
            "Ref": "Topic3DEAE47A7",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "TestedLambda32F7528BF": Object {
      "DependsOn": Array [
        "TestedLambda3ServiceRole2D03AE9A",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "exports.handler = async () => {}",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "TestedLambda3ServiceRole2D03AE9A",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestedLambda3ServiceRole2D03AE9A": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Topic3DEAE47A7": Object {
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`no handler: metric-based error filter is created 1`] = `
Object {
  "Resources": Object {
    "LambdaAlarmsErrorLogAlarm715A94C8": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Ref": "TestedLambdaAAAB7B55",
              },
              " logged an error",
            ],
          ],
        },
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "Errors",
        "Namespace": Object {
          "Fn::Join": Array [
            "",
            Array [
              "stack/Stack/",
              Object {
                "Ref": "TestedLambdaAAAB7B55",
              },
              "/Errors",
            ],
          ],
        },
        "OKActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "LogGroupErrorMetricFilter551B92D2": Object {
      "Properties": Object {
        "FilterPattern": "{ ($.level = \\"ERROR\\") || ($.level = \\"FATAL\\") || ($.requestInfo.status.code = \\"INTERNAL_SERVER_ERROR\\") }",
        "LogGroupName": Object {
          "Ref": "LogGroupF5B46931",
        },
        "MetricTransformations": Array [
          Object {
            "MetricName": "Errors",
            "MetricNamespace": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "stack/Stack/",
                  Object {
                    "Ref": "TestedLambdaAAAB7B55",
                  },
                  "/Errors",
                ],
              ],
            },
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "LogGroupF5B46931": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "TestedLambdaAAAB7B55": Object {
      "DependsOn": Array [
        "TestedLambdaServiceRole1EFFE97F",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "exports.handler = async () => {}",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "TestedLambdaServiceRole1EFFE97F",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestedLambdaServiceRole1EFFE97F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TopicBFC7AF6E": Object {
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`with handler: subscription filter is created and metric filter omitted 1`] = `
Object {
  "Resources": Object {
    "Handler886CB40B": Object {
      "DependsOn": Array [
        "HandlerServiceRoleFCDC14AE",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "exports.handler = async () => {}",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "HandlerServiceRoleFCDC14AE",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "HandlerServiceRoleFCDC14AE": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "LogGroup2477F707C": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "LogGroup2lifligcdklogcontenttoslackerrorsubscription2468A563": Object {
      "DependsOn": Array [
        "LogGroup2lifligcdklogcontenttoslackerrorsubscriptionCanInvokeLambda8C05276F",
      ],
      "Properties": Object {
        "DestinationArn": Object {
          "Fn::GetAtt": Array [
            "Handler886CB40B",
            "Arn",
          ],
        },
        "FilterPattern": "{ ($.level = \\"ERROR\\") || ($.level = \\"FATAL\\") || ($.requestInfo.status.code = \\"INTERNAL_SERVER_ERROR\\") }",
        "LogGroupName": Object {
          "Ref": "LogGroup2477F707C",
        },
      },
      "Type": "AWS::Logs::SubscriptionFilter",
    },
    "LogGroup2lifligcdklogcontenttoslackerrorsubscriptionCanInvokeLambda8C05276F": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "Handler886CB40B",
            "Arn",
          ],
        },
        "Principal": "logs.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "LogGroup2477F707C",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "TestedLambda267C519AF": Object {
      "DependsOn": Array [
        "TestedLambda2ServiceRole41530E20",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "exports.handler = async () => {}",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "TestedLambda2ServiceRole41530E20",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestedLambda2ServiceRole41530E20": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Topic269377B75": Object {
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;
